on to footer section, now on policy

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <tr>
                         <td>
                             <!--start of header text -->
-                            <table class="header-text" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="text-align: center">
+                            <table class="header-text" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="text-align: center;">
                                 <tr>
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/" style="text-decoration: none;" target="_blank">
@@ -37,7 +37,7 @@
                             </table>
                             <!--end of header text -->
                             <!--Start of header logo -->
-                            <table class="header-logo" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="text-align: center">
+                            <table class="header-logo" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="text-align: center;">
                                 <tr>
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/" target="_blank">
@@ -172,26 +172,117 @@
                         </td>
                     </tr>
                     <!--end of Top Offers row-->
-                    <!--start of main row-->
+                    <!--start of More to Love row-->
                     <tr>
-                        <td></td>
+                        <td>      
+                             <table class="more-love" width="100%" align="center" cellspacing="0" cellpadding="0" border="0">
+                                <tr>
+                                    <td>
+                                        <img src="https://i.postimg.cc/2STPjwKW/love-break.png" alt="love-break" style="max-width: 600px;">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <a href="https://bbwi.attn.tv/p/bHr/landing-page" target="_blank">
+                                            <img src="https://i.postimg.cc/gJhShqNN/text-link.png" alt="text-link" style="max-width: 600px;">
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <a href="https://www.bathandbodyworks.com/s/BathAndBodyWorks/order-pickup" target="_blank">
+                                            <img src="https://i.postimg.cc/9XNYLzgG/buy-link.png" alt="buy_link" style="max-width: 600px;">
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
                     </tr>
-                    <!--start of main row-->
-                    <!--start of main row-->
+                    <!--end of More to Love row-->
+                    <!--start of Visit Us row-->
                     <tr>
-                        <td></td>
+                        <td>
+                            <table class="visit-us" width="100%" align="center" cellspacing="0" cellpadding="0" border="0">
+                               <tr>
+                                    <td>
+                                        <a href="https://www.bathandbodyworks.com/store-locator" target="_blank">
+                                            <img src="https://i.postimg.cc/J4DcvmSS/visit-us-top.png" alt="visit-us-top" style="margin-bottom: -5px; max-width: 600px;">
+                                            <img src="https://i.postimg.cc/BQrcGk0b/visit-us-bottom.png" alt="visit-us-bottom" style="max-width: 600px;">
+                                        </a>
+                                    </td>
+                               </tr>
+                            </table>
+                        </td>
                     </tr>
-                    <!--start of main row-->
-                    <!--start of main row-->
+                    <!--end of Visit Us row-->
+                    <!--start of Love it row-->
                     <tr>
-                        <td></td>
+                        <td>
+                            <table class="visit-us" width="100%" align="center" cellspacing="0" cellpadding="0" border="0">
+                                <tr>
+                                    <td>
+                                        <a href="https://customercare.bathandbodyworks.com/hc/en-us/articles/4410658680083-What-is-your-return-policy" target="_blank">
+                                            <img src="https://i.postimg.cc/ZqRXWdGM/love-it.jpg" alt="love_it" style="max-width: 600px;">
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
                     </tr>
-                    <!--start of main row-->
-                    <!--start of main row-->
+                    <!--end of Love it row-->
+                    <!--start of Footer row-->
                     <tr>
-                        <td></td>
+                        <td>
+                            <table class="footer" width="100%" align="center" cellspacing="0" cellpadding="0" border="0">
+                                <!--start of social media row-->
+                                <tr>
+                                    <td>  
+                                        <table class="social-media" width="50%" align="center" cellspacing="0" cellpadding="0" border="0">
+                                            <tr>
+                                                <td>
+                                                    <a href="https://www.facebook.com/bathandbodyworks" target="_blank">
+                                                        <img src="https://i.postimg.cc/63DsJp11/fb-logo.png" alt="fb-logo" style="height: 45px; width: 45px; margin-right: 30px;">
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <a href="https://twitter.com/bathbodyworks" target="_blank">
+                                                        <img src="https://i.postimg.cc/RhQgsCrt/twitter-logo.png" alt="twitter-logo" style="height: 45px; width: 45px; margin-right: 30px;">
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <a href="https://www.instagram.com/bathandbodyworks" target="_blank">
+                                                        <img src="https://i.postimg.cc/x19wS7tY/ig-logo.png" alt="ig-logo" style="height: 45px; width: 45px; margin-right: 30px;">
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <a href="https://www.tiktok.com/@bathandbodyworks" target="_blank">
+                                                        <img src="https://i.postimg.cc/Bvk7twcj/tiktok-logo.png" alt="tiktok-logo" style="height: 45px; width: 45px; margin-right: 30px;">
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <a href="https://www.youtube.com/user/bathandbodyworks" target="_blank">
+                                                        <img src="https://i.postimg.cc/dVFyjSTT/youtube-logo.png" alt="youtube-logo" style="height: 45px; width: 45px; margin-right: 30px;">
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <a href="https://www.pinterest.com/bathbodyworks/" target="_blank">
+                                                        <img src="https://i.postimg.cc/8zk0Yvzz/pinterest-logo.png" alt="pinterest-logo" style="height: 45px; width: 45px;">
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <!--end of social media row-->
+                                <!--start of policy row-->
+                                <tr>
+                                    <td></td>
+                                </tr>
+                                <!--end of policy row-->
+                           </table>
+                        </td>
                     </tr>
-                    <!--start of main row-->
+                    <!--start of Footer row-->
                     <!--start of main row-->
                     <tr>
                         <td></td>
