--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <title>Promotional Email</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <style>
+        /* Desktop */
+        @media only screen and (min-width: 960px) {
+            .container {
+                max-width: 600px;
+            }
+        }
+
+        /* Midsizes */
+        @media only screen and (max-width: 960px) {
+            .container {
+                width: 600px;
+            }
+        }
+
+        /* Mobile */
+        @media only screen and (max-width: 600px) {
+            .container {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -24,8 +45,8 @@
                             <table class="header-text" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="text-align: center;">
                                 <tr>
                                     <td>
-                                        <a href="https://www.bathandbodyworks.com/" style="text-decoration: none;" target="_blank">
-                                            <h5 style="font-family: sans-serif; font-size: 14px; color: #1c3fa2; margin: 5px 0;">
+                                        <a href="https://www.bathandbodyworks.com/" style="text-decoration: none; width: 100%" target="_blank">
+                                            <h5 style="font-family: sans-serif; font-size: 14px; font-weight: 600;color: #1c3fa2; margin: 5px 0;">
                                                 your glow-up is waiting...
                                             </h5>
                                         </a>
@@ -41,7 +62,7 @@
                                 <tr>
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/" target="_blank">
-                                            <img src="https://i.postimg.cc/bNLRfGsC/header-logo.jpg" alt="header_logo">
+                                            <img src="https://i.postimg.cc/bNLRfGsC/header-logo.jpg" alt="header_logo" style="width: 100%">
                                         </a>
                                     </td>
                                 </tr>
@@ -66,7 +87,7 @@
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/c/all-candles/3-wick-candles" target="_blank">
                                             <img src="https://i.postimg.cc/c1FgBPCj/limited-time-head-pink.png" alt="limited-time-head-pink" style="margin-bottom: -5px;">
-                                            <img src="https://i.postimg.cc/BZMDgPkg/main-candles.gif" alt="main_candles">
+                                            <img src="https://i.postimg.cc/BZMDgPkg/main-candles.gif" alt="main_candles" style="margin-bottom: 16px;">
                                         </a>
                                     </td>
                                 </tr>
@@ -84,7 +105,7 @@
                                 </tr>
                             </table>
                             <!--Hair Row-->
-                            <table class="main-row" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="text-align: center">
+                            <table class="main-hair" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="text-align: center">
                                 <tr>
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/g/moxy-collection" target="_blank">
@@ -100,7 +121,6 @@
                     <!--start of Top Offers row-->
                     <tr>
                         <td>
-                            
                             <table class="offers" width="100%" align="center" cellspacing="0" cellpadding="0" border="0">
                                 <tr>
                                     <td>
@@ -241,27 +261,27 @@
                                             <tr>
                                                 <td>
                                                     <a href="https://www.facebook.com/bathandbodyworks" target="_blank">
-                                                        <img src="https://i.postimg.cc/63DsJp11/fb-logo.png" alt="fb-logo" style="height: 45px; width: 45px; margin-right: 30px;">
+                                                        <img src="https://i.postimg.cc/63DsJp11/fb-logo.png" alt="fb-logo" style="height: 45px; width: 45px; margin-right: 45px;">
                                                     </a>
                                                 </td>
                                                 <td>
                                                     <a href="https://twitter.com/bathbodyworks" target="_blank">
-                                                        <img src="https://i.postimg.cc/RhQgsCrt/twitter-logo.png" alt="twitter-logo" style="height: 45px; width: 45px; margin-right: 30px;">
+                                                        <img src="https://i.postimg.cc/RhQgsCrt/twitter-logo.png" alt="twitter-logo" style="height: 45px; width: 45px; margin-right: 45px;">
                                                     </a>
                                                 </td>
                                                 <td>
                                                     <a href="https://www.instagram.com/bathandbodyworks" target="_blank">
-                                                        <img src="https://i.postimg.cc/x19wS7tY/ig-logo.png" alt="ig-logo" style="height: 45px; width: 45px; margin-right: 30px;">
+                                                        <img src="https://i.postimg.cc/x19wS7tY/ig-logo.png" alt="ig-logo" style="height: 45px; width: 45px; margin-right: 45px;">
                                                     </a>
                                                 </td>
                                                 <td>
                                                     <a href="https://www.tiktok.com/@bathandbodyworks" target="_blank">
-                                                        <img src="https://i.postimg.cc/Bvk7twcj/tiktok-logo.png" alt="tiktok-logo" style="height: 45px; width: 45px; margin-right: 30px;">
+                                                        <img src="https://i.postimg.cc/Bvk7twcj/tiktok-logo.png" alt="tiktok-logo" style="height: 45px; width: 45px; margin-right: 45px;">
                                                     </a>
                                                 </td>
                                                 <td>
                                                     <a href="https://www.youtube.com/user/bathandbodyworks" target="_blank">
-                                                        <img src="https://i.postimg.cc/dVFyjSTT/youtube-logo.png" alt="youtube-logo" style="height: 45px; width: 45px; margin-right: 30px;">
+                                                        <img src="https://i.postimg.cc/dVFyjSTT/youtube-logo.png" alt="youtube-logo" style="height: 45px; width: 45px; margin-right: 45px;">
                                                     </a>
                                                 </td>
                                                 <td>
@@ -276,23 +296,102 @@
                                 <!--end of social media row-->
                                 <!--start of policy row-->
                                 <tr>
-                                    <td></td>
+                                    <td>
+                                      <table class="footer-policy" width="33.33%" align="center" cellspacing="0" cellpadding="0" border="0">
+                                        <tr>
+                                          <td>
+                                            <a href="#" target="_blank">
+                                              <img src="https://i.postimg.cc/dVWxc0hm/private-policy-link.jpg" alt="privacy-policy">
+                                            </a>
+                                          </td>
+                                          <td>
+                                            <a href="#" target="_blank">
+                                              <img src="https://i.postimg.cc/B63mGvdm/unsubscribe-link.jpg" alt="unsubscribe">
+                                            </a>
+                                          </td>
+                                          <td>
+                                            <a href="#" target="_blank">
+                                              <img src="https://i.postimg.cc/6QbJc0VK/customer-care-link.jpg" alt="customer-care">
+                                            </a>
+                                          </td>
+                                        </tr>
+                                      </table>
+                                    </td>
                                 </tr>
                                 <!--end of policy row-->
+                                <!--start of footer break row-->
+                                <tr>
+                                  <td>
+                                    <img src="https://i.postimg.cc/GhFWVrPq/footer-break.png" alt="footer-break" style="margin-bottom: 15px;">
+                                  </td>
+                                </tr>
+                                <!--end of footer break row-->
                            </table>
                         </td>
                     </tr>
                     <!--start of Footer row-->
-                    <!--start of main row-->
+                    <!--start of Fine Print row-->
                     <tr>
-                        <td></td>
+                        <td>
+                          <table class="fine-print" width="100%" align="center" cellspacing="0" cellpadding="0" border="0">
+                            <tr>
+                              <td>
+                                <img src="https://i.postimg.cc/50HcRCpC/footer-1.png" alt="footer-1">
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <img src="https://i.postimg.cc/kG80nP0M/footer-2.png" alt="footer-2">
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <img src="https://i.postimg.cc/YqBcdjFv/footer-3.png" alt="footer-3">
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <img src="https://i.postimg.cc/wxm85D1K/footer-4.png" alt="footer-4">
+                              </td>
+                            </tr>
+                            <!--Text-->
+                            <table class="text-table" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="font-family: sans-serif; color: #666; padding: 0 12px; margin-top: -13px; font-size: 12px; font-weight: 500;">
+                              <tr>
+                                <td>
+                                  <p>
+                                  Product offers, valid dates and participating stores subject to change without notice. offers not valid on product purchased through third parties (including, but not limited to, Instacart).</p>
+                                </td>
+                              </tr>
+                            <tr>
+                              <td>
+                                <p>Stores and Online: Selection may vary by store and online. While supplies last, no substitutions and no rain checks issued. Not valid toward previous purchases. Other restrictions may apply.</p>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <p>For more information visit <a href="#" style="color: #666; font-weight: 600;">Customer Care</a>. Please do not reply to this email, as it is sent from an address that cannout accept incoming email.</p>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <p>If you no longer wish to recieve product offers and other marketing emails from BathandBodyWorks.com, or to update your frequency, please <a href="#" style="color: #666; font-weight: 600;">click here</a>.</p>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <p style="text-transform: uppercase;">Bath & Body Works, <a href="#" style="text-decoration: none;">95 west main street, new albany, ohio 43054 usa</a></p>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <p>© 2023 Bath and Body Works. All rights reserved.</p>
+                              </td>
+                            </tr>
+                            </table>
+                          </table>
+                        </td>
                     </tr>
-                    <!--start of main row-->
-                    <!--start of main row-->
-                    <tr>
-                        <td></td>
-                    </tr>
-                    <!--start of main row-->
+                    <!--start of Fine Print row-->
                 </table>
             </td>
         </tr>
