fixed some spelling on html

--- a/index.html
+++ b/index.html
@@ -369,12 +369,12 @@
                             </tr>
                             <tr>
                               <td>
-                                <p>For more information visit <a href="#" style="color: #666; font-weight: 600;">Customer Care</a>. Please do not reply to this email, as it is sent from an address that cannout accept incoming email.</p>
+                                <p>For more information visit <a href="#" style="color: #666; font-weight: 600;">Customer Care</a>. Please do not reply to this email, as it is sent from an address that cannot accept incoming email.</p>
                               </td>
                             </tr>
                             <tr>
                               <td>
-                                <p>If you no longer wish to recieve product offers and other marketing emails from BathandBodyWorks.com, or to update your frequency, please <a href="#" style="color: #666; font-weight: 600;">click here</a>.</p>
+                                <p>If you no longer wish to receive product offers and other marketing emails from BathingBodyWorks.com, or to update your frequency, please <a href="#" style="color: #666; font-weight: 600;">click here</a>.</p>
                               </td>
                             </tr>
                             <tr>
