Updated Pics for Portfolio

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                                 <tr>
                                     <td>
                                         <a href="https://www.bathandbodyworks.com/" target="_blank">
-                                            <img src="https://i.postimg.cc/bNLRfGsC/header-logo.jpg" alt="header_logo" style="width: 100%">
+                                            <img src="/img/header-logo.jpg" alt="header_logo" style="width: 100%">
                                         </a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <a href="#">
-                                            <img src="https://i.postimg.cc/Hkx9YpMp/header-points.png" alt="header_points">
+                                            <img src="/img/header-points.png" alt="header_points">
                                         </a>
                                     </td>
                                 </tr>
